--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 *{ /* Keeps content centered to the page */
     margin: 0;
     padding: 0;
@@ -17,6 +16,16 @@ h1 {
     color: #565656;
 }
 
+.weather-container {
+    display: none; /* Initially hide the weather container */
+    /* ... (other styles) */
+}
+
+.info-container {
+    display: none; /* Initially hide the info container */
+    /* ... (other styles) */
+}
+
 .main-container {
     display: flex;
     gap: 35px;
@@ -26,12 +35,36 @@ h1 {
 
 .input-container {
     width: 550px;
-    height: 423px;
+    height: 600px;
     background-color: #fff;
     border-radius: 10px;
-    padding: 30px;
-    display: inline-block;
+    padding: 50px;
     text-align: center;
+}
+
+#pastCityList a {
+    cursor: pointer;
+    color: #007bff;
+    padding: 2px 50px;
+    
+    border-radius: 5px;
+    text-decoration: underline;
+    text-align:center;
+
+}
+
+.pastCitySearches {
+    width: 550px;
+    height: 200px;
+    background-color: #007bff;
+    padding: 20px;
+}
+
+#location {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 label {
